--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
 
 
 
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
@@ -42,6 +43,10 @@ dev_dependencies:
     sdk: flutter
   dio: ^5.1.1
   custom_banners: ^1.0.3
+  event_bus: ^2.0.0
+  shared_preferences: ^2.1.1
+  toast: ^0.2.9
+
 
   #  banner_view: ^1.1.2
   # The "flutter_lints" package below contains a set of recommended lints to
@@ -61,6 +66,8 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  assets:
+    - assets/images/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
